# greedy

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-native.yml  docker-publish.yml
ddgs/: __init__.py  cli.py  ddgs.py  similarity.py  utils.py  utils_native.py
ddgs/api_server/: api.py
docker_test/: README.md  benchmark.py  docker-compose.yml
native/: Cargo.toml  README.md  build.py
native/src/: ffi.rs  lib.rs  normalize.rs  similarity.rs  utils.rs
skills/ddgs/: SKILL.md
tests/: test_native_text.py
