[package]
name = "ddgs-native"
version = "0.1.0"
edition = "2021"
authors = ["Grandpa EJ"]
license = "MIT"
description = "Fast text normalization for Greedy [DDGS]"

[lib]
name = "ddgs_native"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11"
unicode-normalization = "0.1"
html-escape = "0.2"
once_cell = "1.20"
aho-corasick = "1.1"
rayon = "1.10"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
